local image storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
       ref: master
       path: packages/firebase_storage
 
+  path_provider: ^1.6.0
+  gallery_saver: ^1.0.7
+
   image_cropper: 1.2.1
   image_picker: 0.6.3+1
 
