--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
       path: packages/firebase_storage
 
   path_provider: ^1.6.0
-  gallery_saver: ^1.0.7
+  firebase_ml_vision: 0.9.3+5
 
   image_cropper: 1.2.1
   image_picker: 0.6.3+1
