--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,11 @@ dependencies:
       path: packages/firebase_storage
 
   path_provider: ^1.6.0
+
   firebase_ml_vision: 0.9.3+5
+
+  flappy_search_bar: ^1.7.2
+
 
   image_cropper: 1.2.1
   image_picker: 0.6.3+1
